@@ -1,5 +1,10 @@
 2004-03-29  Mark McLoughlin  <mark@skynet.ie>
 
+	* gconf/gconf-database.c:
+	(safe_g_hash_table_insert): remove - no hash table here.
+
+2004-03-29  Mark McLoughlin  <mark@skynet.ie>
+
 	* gconf/gconf-engine.h: add gconf_engine_get_for_addresses()
 	and gconf_engine_get_local_for_addresses().
 	
